fixed contrast error

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -8,6 +8,10 @@ body {
     overflow-x: hidden;
 }
 
+a {
+    color: #D9B310;
+}
+
 
 
 
